[tool.poetry]
name = "resimpy"
version = "0.1.0"
description = "Oil&Gas Reservoir Simulation tools"
authors = ["scuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
pandas = "^1.2.4"
Shapely = "^1.7.1"
pydantic = "^1.8.1"
pyvista = "^0.29.1"
scipy = "1.6.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
notebook = "^6.3.0"
mkdocstrings = "^0.15.0"
mkdocs-material = "^7.1.3"
openpyxl = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
